--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .item{
     display: flex;
-    text-align: center;
+    /* text-align: center; */
     justify-content: center;
 }
 /* Your CSS Code here. */
