--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
-.item{
+.holder{
     display: flex;
-    /* text-align: center; */
-    justify-content: center;
+height: 30px;
+width: 300;
+justify-content: center;
+align-items: center;
 }
-/* Your CSS Code here. */
+
+
+
+/* .item{ */
+    
+    /* text-align: center; */
+    /* justify-content: center; */
+
